--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -1,4 +1,4 @@
-ARG python_ver=3.7
+ARG python_ver=3.10
 FROM python:${python_ver}
 
 ARG netbox_ver=master
@@ -18,17 +18,16 @@ RUN apt-get update && apt-get install -y snmpd snmp libsnmp-dev
 # Install NetBox
 # -------------------------------------------------------------------------------------
 RUN git clone --single-branch --branch ${netbox_ver} https://github.com/netbox-community/netbox.git /opt/netbox/ && \
-    cd /opt/netbox/ && \
-    pip install -r /opt/netbox/requirements.txt
+  cd /opt/netbox/ && \
+  pip install -r /opt/netbox/requirements.txt
 
 # Make the django-debug-toolbar always visible when DEBUG is enabled,
 # except when we're running Django unit-tests.
 RUN echo "import sys" >> /opt/netbox/netbox/netbox/settings.py && \
-    echo "TESTING = len(sys.argv) > 1 and sys.argv[1] == 'test'" >> /opt/netbox/netbox/netbox/settings.py && \
-    echo "DEBUG_TOOLBAR_CONFIG = {'SHOW_TOOLBAR_CALLBACK': lambda _: DEBUG and not TESTING }" >> /opt/netbox/netbox/netbox/settings.py
+  echo "TESTING = len(sys.argv) > 1 and sys.argv[1] == 'test'" >> /opt/netbox/netbox/netbox/settings.py && \
+  echo "DEBUG_TOOLBAR_CONFIG = {'SHOW_TOOLBAR_CALLBACK': lambda _: DEBUG and not TESTING }" >> /opt/netbox/netbox/netbox/settings.py
 
-# Work around https://github.com/rq/django-rq/issues/421
-RUN pip install django-rq==2.3.2
+RUN pip install django-rq
 
 # -------------------------------------------------------------------------------------
 # Install Netbox Plugin
