--- a/development/dev.env
+++ b/development/dev.env
@@ -6,7 +6,7 @@ PGPASSWORD=decinablesprewad
 DB_HOST=postgres
 NAPALM_TIMEOUT=5
 MAX_PAGE_SIZE=0
-SECRET_KEY=bqn8nn4qmjvx4hv2u5qr4pp46s3w9skbb63y
+SECRET_KEY=bqn8nn4qmjvx4hv2u5qr4pp46s3w9skbb63y2diao§DID2em2i§-RP
 POSTGRES_USER=netbox
 POSTGRES_PASSWORD=decinablesprewad
 POSTGRES_DB=netbox
